made superuser requirement explicit